# gviewer

./: CMakeLists.txt  README.md  application.qrc  main.cpp  viewer.pro
inc/: editor.h  glob_state.h  line.h  plotter.h  point.h  renderarea.h
src/: editor.cpp  glob_state.cpp  line.cpp  plotter.cpp  point.cpp  renderarea.cpp
